[Mingle 7758] - Air Filter Dimensions - fixing drop down spacing issue @tablet size

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.mobile.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.mobile.less
@@ -39,7 +39,7 @@
 
                           }
                             li {
-                                border: 4px solid red;
+                                border: 1px solid @secondaryHueLight;
                                 padding: 4px;
                                 text-align: center;
                             }
