--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.tablet.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.tablet.less
@@ -16,6 +16,8 @@
                 .span4{
                     .responsiveDropdown{
                         min-width: 150px;
+                        margin-bottom: 20px;
+                      
                         ul{
                             li {
                                 border: 0;
